<resources>
    <string name="app_name">ParliamentMemberApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_welcome">Welcome to the first fragment</string>
    <string name="party">Party</string>
    <string name="partylogo">PartyLogo</string>
    <string name="member">Member</string>
    <string name="member_name">Member name</string>
    <string name="img_star">img_star</string>
    <string name="txt_member">txt_member</string>
    <string name="back">Back</string>
    <string name="parties">Parties</string>
    <string name="members">Members</string>
    <string name="comment">comment</string>
    <string name="save">Save</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="comment_icon">comment_icon</string>
    <string name="date">Date</string>
</resources>