<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:background="@drawable/round_corners">

        <TextView
            android:id="@+id/txt_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_member"
            android:padding="15dp"
            android:text="@string/member_name"
            android:textColor="#37474F"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="54dp"
            android:layout_height="51dp"
            android:layout_marginEnd="28dp"
            android:button="@drawable/button_checked_state"
            android:contentDescription="@string/img_star"
            app:useMaterialThemeColors="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>