<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_comment_date"
        app:layout_constraintEnd_toEndOf="@+id/txt_comment_date"
        app:layout_constraintStart_toEndOf="@+id/txt_comment_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_comment_date">

        <ImageView
            android:id="@+id/img_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/comment_icon"
            android:src="@drawable/ic_comment"
            app:layout_constraintBottom_toBottomOf="@+id/txt_comment_date"
            app:layout_constraintStart_toStartOf="@+id/txt_user_comment"
            app:layout_constraintTop_toBottomOf="@+id/txt_comment_date" />

        <TextView
            android:id="@+id/txt_comment_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_user_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_user_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/comment"
            android:textAlignment="center"
            android:textColor="#7C7C7C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_comment_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>